# ESP-IDF-Plant_Monitor

./: .gitignore  CMakeLists.txt  partitions.csv
main/: AHT20.c  AHT20.h  BLE.c  BLE.h  CMakeLists.txt  WiFi_app.c  WiFi_app.h  app_NVS.c  app_NVS.h  aws_iot.c  aws_iot.h  global_event_group.c  global_event_group.h  main.c  moisture_sensor.c  rgb_led.c  rgb_led.h  tasks_common.h  toggle_sleep_button.c
